posiGen_FullsendBox/src/objects/LDLease_Transaction__c.object
<CustomObject>
    <description>Billing transaction details from LD Leases</description>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <description>Billing date of the LD Lease transaction (lease month and year)</description>
        <inlineHelpText>LDLease Transaction</inlineHelpText>
        <label>Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferment_Amount__c</fullName>
        <description>Amount deferred this month</description>
        <inlineHelpText>Amount deferred this month</inlineHelpText>
        <label>Deferment Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferment_Transactions__c</fullName>
        <description>Count of deferment transactions for the current month</description>
        <inlineHelpText>Count of deferment transactions for the current month</inlineHelpText>
        <label>Deferment Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Billing_Amount__c</fullName>
        <description>Total billed for EE this month</description>
        <inlineHelpText>Total billed for EE this month</inlineHelpText>
        <label>EE Billing Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Billing_Transactions__c</fullName>
        <description>Count of EE billing transactions for the current month</description>
        <inlineHelpText>Count of EE billing transactions for the current month</inlineHelpText>
        <label>EE Billing Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LD_Lease__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related LD Lease record. NOTE: LD Lease object already has 2 master-detail relationships, so this relationship can only be a lookup.</description>
        <label>LD Lease</label>
        <referenceTo>LD_Lease__c</referenceTo>
        <relationshipLabel>LDLease Transactions</relationshipLabel>
        <relationshipName>LDLease_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Billing_Amount__c</fullName>
        <description>Total billed this month for PV lease, including tax</description>
        <inlineHelpText>Total billed this month for PV lease, including tax</inlineHelpText>
        <label>PV Billing Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Billing_Transactions__c</fullName>
        <description>Count of PV billing transactions for the current month</description>
        <inlineHelpText>Count of PV billing transactions for the current month</inlineHelpText>
        <label>PV Billing Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billing_Amount__c</fullName>
        <description>Total billing amount for PV (including tax) and EE lease this month</description>
        <formula>PV_Billing_Amount__c + EE_Billing_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total billing amount for PV (including tax) and EE lease this month</inlineHelpText>
        <label>Total Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LDLease Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Date__c</columns>
        <columns>PV_Billing_Amount__c</columns>
        <columns>EE_Billing_Amount__c</columns>
        <columns>Deferment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LDLease Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDLease Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>